tests/error/misc_errors/unsupported_for_else.err
Error: Unsupported (at $FILE:9:8)
  | 
7 |         pass
8 |     else:
9 |         print(i)
  |         ^^^^^^^^ Loop else clauses are not supported

Guppy compilation failed due to 1 previous error
